--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "admin/phpiggy",
-    "description": "A PHP application for traching expenses",
+    "name": "luis/phpiggy",
+    "description": "A PHP application for tracking expenses.",
     "type": "project",
     "require": {},
     "autoload": {
-        "psr-4": {
-            "Framework\\": "src/Framework",
-            "App\\": "src/App"
-        }
+      "psr-4": {
+        "Framework\\": "src/Framework",
+        "App\\": "src/App"
+      },
+      "files": [
+        "src/App/Config/Routes.php"
+      ]
     }
-}
+  }
